apps/base/new-new-boplats/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: new-new-boplats-api
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: new-new-boplats-api
  template:
    spec:
      containers:
        - name: new-new-boplats-api
          image: artifactory.local.hejsan.xyz/gitlab-registry/josmase/apps/boplats-map/api:2026-08-13-b0ac39c3
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
            requests:
              memory: 64Mi
              cpu: 10m
