apps/base/new-new-boplats/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-new-boplats-api
spec:
  selector:
    app: new-new-boplats-api
  ports:
    - name: http
      targetPort: 3000
      port: 3000
